playbooks/argocd/applications/media/radarr/ingress.yaml
# playbooks/yaml/argocd-apps/radarr/ingress.yaml
# Ingress for Radarr
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - radarr.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: radarr.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
